Truffle: run real optimizer-produced TPC-H plans + fix decimal/numeric coercion
The Truffle backend now executes the *same* ProtoPhysicalPlan the interpreter
runs, end-to-end from SQL: SQL → AstToProtoTransform → Optimizer →
PhysicalPlanner → {interpreter | TypedTruffleCompiler}. New TpchTruffleParitySpec
runs Q6 selection, Q6 global-SUM revenue, a Q1-style grouped aggregate
(GROUP BY + ORDER BY), and a customer⋈nation join+group+order over the real
sf-0.01 parquet, asserting row-for-row agreement (not just row counts) with
PhysicalPlanExecutor. This is the integration gate for the cross-engine
benchmark (cold-start + steady-state vs Spark).

Fix uncovered by real data: TPC-H predicates compare a DecimalType(38,18)
column against DoubleValue/IntValue literals with no Cast inserted
(`discount BETWEEN 0.05 AND 0.07`, `quantity < 24`). The typed nodes had only
(decimal,decimal) specializations, so these matched 0 rows. Added an
`@ImplicitCast BigDecimal → double` to SqlTypes, mirroring the interpreter's
`(Number, Number) → doubleValue` rule: mixed decimal/numeric ops widen to
double, while decimal-vs-decimal still hits the exact BigDecimal
specialization (exact-type match beats an implicitly-cast one) — existing
exact-decimal tests still pass.

Build: truffleBackend now dependsOn sqlParser; run/javaOptions get the Arrow
--add-opens. truffle-backend 62/62.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>